--- a/style/index.css
+++ b/style/index.css
@@ -53,7 +53,7 @@ a {
     background-position: center center;    
     padding-top: 128px;
     padding-bottom: 128px;
-    background-image:url(./images/image.png);    
+    background-image:url(../images/image.png);    
 }
 .PiperNet_Is_Here{
     box-sizing: border-box;
@@ -98,7 +98,7 @@ a {
 
 /* блок Hero */ 
 .hero{
-    background-image:url(./images/image-9.png);
+    background-image:url(../images/image-9.png);
     background-size: cover;
     background-position: center center;
     padding-top: 128px;
